Added credit to GeeksforGeeks

--- a/sms_spam_detection.ipynb
+++ b/sms_spam_detection.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that I used https://www.geeksforgeeks.org/sms-spam-detection-using-tensorflow-in-python/ as a guide. I followed through this guide, but added some regularization techniques to the neural network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This program classifies messages as 'ham' (non-spam messages) or 'spam' for spam messages. First, we load and organize the data."
    ]
   },
@@ -323,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
