Tested decision tree regression, outperforming other models

--- a/vehicle_prediction.ipynb
+++ b/vehicle_prediction.ipynb
@@ -101,33 +101,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0         2014\n",
-      "1         2014\n",
-      "2         2014\n",
-      "3         2014\n",
-      "4         2014\n",
-      "          ... \n",
-      "558832    2014\n",
-      "558833    2014\n",
-      "558834    2014\n",
-      "558835    2014\n",
-      "558836    2014\n",
-      "Name: saledate, Length: 558837, dtype: object\n"
+      "0         0\n",
+      "1         0\n",
+      "2         0\n",
+      "3         0\n",
+      "4         0\n",
+      "         ..\n",
+      "558832    0\n",
+      "558833    0\n",
+      "558834    0\n",
+      "558835    0\n",
+      "558836    0\n",
+      "Name: saledate, Length: 558837, dtype: int32\n",
+      "0         43\n",
+      "1         43\n",
+      "2         33\n",
+      "3         43\n",
+      "4         33\n",
+      "          ..\n",
+      "558832    41\n",
+      "558833    43\n",
+      "558834    27\n",
+      "558835    43\n",
+      "558836    33\n",
+      "Name: color, Length: 558837, dtype: int32\n"
      ]
     }
    ],
    "source": [
     "car_data[\"saledate\"] = str(car_data[\"saledate\"])\n",
     "car_data[\"saledate\"] = [date[21:25] for date in car_data[\"saledate\"]]\n",
+    "# print(car_data[\"saledate\"])\n",
+    "car_data[\"saledate\"] = LabelEncoder().fit_transform(car_data[\"saledate\"])\n",
     "print(car_data[\"saledate\"])\n",
-    "car_data[\"saledate\"] = LabelEncoder().fit_transform(car_data[\"saledate\"])"
+    "print(car_data[\"color\"])"
    ]
   },
   {
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -284,13 +298,8 @@
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "def calculate_rmse(actual, pred):\n",
-    "    actual = np.array(actual)\n",
-    "    pred = np.array(pred)\n",
-    "    return np.sqrt(np.square(np.subtract(actual, pred)).mean())\n",
-    "\n",
     "y_pred = lin_reg.predict(X_test)\n",
-    "rmse = calculate_rmse(y_test, y_pred)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "print(f'RMSE: {rmse}')\n",
     "print(f'MSE: {mean_squared_error(y_test, y_pred)}')"
    ]
@@ -303,16 +312,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's try a Decision Tree Regressor. We find the best depth for this regressor."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from tabulate import tabulate\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "# error = [y_train[i] - y_pred[i] for i in range(len(y_pred))]\n",
-    "# table = list(zip(y_pred.tolist(), y_train.tolist(), error))\n",
-    "# print(tabulate(table, headers=[\"Predicted Price\", \"Actual Price\", \"Error\"], tablefmt=\"grid\"))"
+    "r_squared_values = {}\n",
+    "rmse_values = {}\n",
+    "\n",
+    "for depth in range(1, 10):\n",
+    "    dtr = DecisionTreeRegressor(max_depth=depth, random_state=42)\n",
+    "    dtr.fit(X_train, y_train)\n",
+    "    r_squared_values[depth] = dtr.score(X_train, y_train)\n",
+    "    y_pred = dtr.predict(X_test)\n",
+    "    rmse_values[depth] = np.sqrt(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum R-squared value of 97.42270532984415 for depth 9\n",
+      "Minimum RMSE value of 1564.5362303187076 for depth 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_r_squared_val = max(r_squared_values.values())\n",
+    "max_r_squared_key = max(r_squared_values, key=lambda x: r_squared_values[x])\n",
+    "print(f'Maximum R-squared value of {max_r_squared_val*100} for depth {max_r_squared_key}')\n",
+    "\n",
+    "min_rmse_val = min(rmse_values.values())\n",
+    "min_rmse_key = min(rmse_values, key=lambda x: rmse_values[x])\n",
+    "print(f'Minimum RMSE value of {min_rmse_val} for depth {min_rmse_key}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that the best depth for the decision tree is 9, yielding an R-squared value of 97.42 and an RMSE value of 1,565, surpassing the linear regression model."
    ]
   },
   {
@@ -372,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We got an RMSE of 1682, only slightly worse than the linear regression model."
+    "We got an RMSE of 1682, only slightly worse than the linear regression model. The decision tree regressor outperforms the linear regression model and the neural network."
    ]
   }
  ],
