Converted image data to COCO format

--- a/live_weapon_detection.ipynb
+++ b/live_weapon_detection.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4c6ebf6d",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "from PIL import Image\n",
     "from torchvision import transforms\n",
     "\n",
-    "def resize_images(images_path:str, resized_width:int, resized_height:int, save=False) -> tuple:\n",
+    "def resize_images(images_path:str, resized_width:int, resized_height:int, save=False) -> list:\n",
     "    \"\"\"\n",
     "    \n",
     "    Resizes images to a given width and height.\n",
@@ -96,7 +96,7 @@
     "        resized_height (int): Height to resize the images.\n",
     "\n",
     "    Returns:\n",
-    "        tuple: NumPy arrays containing the resized images and generated labels.\n",
+    "        list: List containing resized images\n",
     "    \n",
     "    \"\"\"\n",
     "    if save:\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "69a1ab17",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
     "import pandas as pd\n",
     "# Get min dimensions\n",
     "weapons_data = pd.concat(\n",
-    "    map(pd.read_csv, ['weapons.csv', 'weapons_test.csv']), ignore_index=True\n",
+    "    map(pd.read_csv, ['weapons.csv', 'weapons_test.csv'])\n",
     ")\n",
     "min_width = weapons_data['Width'].min()\n",
     "min_height = weapons_data['Height'].min()"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9b97a78c",
    "metadata": {},
    "outputs": [],
@@ -280,27 +280,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6ea9dcd",
+   "metadata": {},
+   "source": [
+    "Next, we will convert this image dataset into COCO format using this tutorial: https://medium.com/codable/convert-any-dataset-to-coco-object-detection-format-with-sahi-95349e1fe2b7. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "052014b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a classes/labels subdirectory that specify if the image has a weapon or not\n",
-    "for filename in os.listdir(train_dest):\n",
-    "    # Get the corresponding image file with the same name\n",
-    "    results = weapons_data[weapons_data['Filename'] == filename]\n",
-    "    # Check if the image contains a weapon\n",
-    "    #print(results['Name'].values)\n",
+    "from sahi.utils.coco import Coco, CocoCategory, CocoImage, CocoAnnotation\n",
+    "from sahi.utils.file import save_json\n",
+    "\n",
+    "coco = Coco()\n",
+    "\n",
+    "weapons_data.set_index('Filename', inplace=True)\n",
+    "\n",
+    "root_dir = 'datasets/images_resized'\n",
+    "for dataset in ['train', 'test', 'val']:\n",
+    "    id_num = 0\n",
+    "    ds_path = os.path.join(root_dir, dataset)\n",
+    "\n",
+    "    for filename in os.listdir(ds_path):\n",
+    "        if filename in weapons_data.index:\n",
+    "            row = weapons_data.loc[filename]\n",
+    "\n",
+    "            width = row['Width']\n",
+    "            height = row['Height']\n",
+    "            x_min = row['Xmin']\n",
+    "            y_min = row['Ymin']\n",
+    "            name = row['Name']\n",
+    "\n",
+    "            coco_image = CocoImage(file_name=filename, height=height, width=width)\n",
+    "            coco_image.add_annotation(\n",
+    "                CocoAnnotation(\n",
+    "                    bbox=[x_min, y_min, width, height],\n",
+    "                    category_id = id_num,\n",
+    "                    category_name = name\n",
+    "                )\n",
+    "            )\n",
+    "            coco.add_image(coco_image)\n",
+    "\n",
+    "    save_path = os.path.join(ds_path, 'annotations.coco.json')\n",
+    "    save_json(data=coco.json, save_path=save_path)\n",
+    "\n",
+    "weapons_data.reset_index(inplace=True)\n",
+    "\n",
+    "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d220b1b3",
-   "metadata": {},
-   "source": [
-    "Next, we will convert this image dataset into COCO format using this tutorial: https://medium.com/codable/convert-any-dataset-to-coco-object-detection-format-with-sahi-95349e1fe2b7. "
    ]
   },
   {
