Some issues with RF-DETR

--- a/live_weapon_detection.ipynb
+++ b/live_weapon_detection.ipynb
@@ -246,7 +246,7 @@
     "os.makedirs(train_dest, exist_ok=True)\n",
     "test_dest = os.path.join(src, 'test')\n",
     "os.makedirs(test_dest, exist_ok=True)\n",
-    "val_dest = os.path.join(src, 'val')\n",
+    "val_dest = os.path.join(src, 'valid')\n",
     "os.makedirs(val_dest, exist_ok=True)\n",
     "\n",
     "num_images = 1472\n",
@@ -302,7 +302,7 @@
     "weapons_data.set_index('Filename', inplace=True)\n",
     "\n",
     "root_dir = 'datasets/images_resized'\n",
-    "for dataset in ['train', 'test', 'val']:\n",
+    "for dataset in ['train', 'test', 'valid']:\n",
     "    id_num = 0\n",
     "    ds_path = os.path.join(root_dir, dataset)\n",
     "\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "45b03edb",
    "metadata": {},
    "outputs": [
@@ -382,8 +382,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "num_classes mismatch: model has 90 classes, but your dataset has 0 classes\n",
-      "reinitializing your detection head with 0 classes.\n"
+      "num_classes mismatch: pretrain weights has 90 classes, but your model has 4 classes\n",
+      "reinitializing detection head with 90 classes\n",
+      "num_classes mismatch: model has 4 classes, but your dataset has 0 classes\n",
+      "reinitializing your detection head with 0 classes.\n",
+      "Initializing zero-element tensors is a no-op\n"
      ]
     },
     {
@@ -395,28 +398,48 @@
       "git:\n",
       "  sha: N/A, status: clean, branch: N/A\n",
       "\n",
-      "Namespace(num_classes=0, grad_accum_steps=4, amp=True, lr=0.0001, lr_encoder=0.00015, batch_size=4, weight_decay=0.0001, epochs=10, lr_drop=100, clip_max_norm=0.1, lr_vit_layer_decay=0.8, lr_component_decay=0.7, do_benchmark=False, dropout=0, drop_path=0.0, drop_mode='standard', drop_schedule='constant', cutoff_epoch=0, pretrained_encoder=None, pretrain_weights='rf-detr-base.pth', pretrain_exclude_keys=None, pretrain_keys_modify_to_load=None, pretrained_distiller=None, encoder='dinov2_windowed_small', vit_encoder_num_layers=12, window_block_indexes=None, position_embedding='sine', out_feature_indexes=[2, 5, 8, 11], freeze_encoder=False, layer_norm=True, rms_norm=False, backbone_lora=False, force_no_pretrain=False, dec_layers=3, dim_feedforward=2048, hidden_dim=256, sa_nheads=8, ca_nheads=16, num_queries=300, group_detr=13, two_stage=True, projector_scale=['P4'], lite_refpoint_refine=True, num_select=300, dec_n_points=2, decoder_norm='LN', bbox_reparam=True, freeze_batch_norm=False, set_cost_class=2, set_cost_bbox=5, set_cost_giou=2, cls_loss_coef=1.0, bbox_loss_coef=5, giou_loss_coef=2, focal_alpha=0.25, aux_loss=True, sum_group_losses=False, use_varifocal_loss=False, use_position_supervised_loss=False, ia_bce_loss=True, dataset_file='roboflow', coco_path=None, dataset_dir='datasets/images_resized', square_resize_div_64=True, output_dir='output', dont_save_weights=False, checkpoint_interval=10, seed=42, resume='', start_epoch=0, eval=False, use_ema=True, ema_decay=0.993, ema_tau=100, num_workers=2, device='cpu', world_size=1, dist_url='env://', sync_bn=True, fp16_eval=False, encoder_only=False, backbone_only=False, resolution=560, use_cls_token=False, multi_scale=True, expanded_scales=True, do_random_resize_via_padding=False, warmup_epochs=0, lr_scheduler='step', lr_min_factor=0.0, early_stopping=False, early_stopping_patience=10, early_stopping_min_delta=0.001, early_stopping_use_ema=False, gradient_checkpointing=False, patch_size=14, num_windows=4, positional_encoding_size=37, tensorboard=True, wandb=False, project=None, run=None, class_names=[], run_test=True, distributed=False)\n",
+      "Namespace(num_classes=0, grad_accum_steps=4, amp=True, lr=0.0001, lr_encoder=0.00015, batch_size=4, weight_decay=0.0001, epochs=10, lr_drop=100, clip_max_norm=0.1, lr_vit_layer_decay=0.8, lr_component_decay=0.7, do_benchmark=False, dropout=0, drop_path=0.0, drop_mode='standard', drop_schedule='constant', cutoff_epoch=0, pretrained_encoder=None, pretrain_weights='rf-detr-base.pth', pretrain_exclude_keys=None, pretrain_keys_modify_to_load=None, pretrained_distiller=None, encoder='dinov2_windowed_small', vit_encoder_num_layers=12, window_block_indexes=None, position_embedding='sine', out_feature_indexes=[2, 5, 8, 11], freeze_encoder=False, layer_norm=True, rms_norm=False, backbone_lora=False, force_no_pretrain=False, dec_layers=3, dim_feedforward=2048, hidden_dim=256, sa_nheads=8, ca_nheads=16, num_queries=300, group_detr=13, two_stage=True, projector_scale=['P4'], lite_refpoint_refine=True, num_select=300, dec_n_points=2, decoder_norm='LN', bbox_reparam=True, freeze_batch_norm=False, set_cost_class=2, set_cost_bbox=5, set_cost_giou=2, cls_loss_coef=1.0, bbox_loss_coef=5, giou_loss_coef=2, focal_alpha=0.25, aux_loss=True, sum_group_losses=False, use_varifocal_loss=False, use_position_supervised_loss=False, ia_bce_loss=True, dataset_file='roboflow', coco_path=None, dataset_dir='datasets/images_resized', square_resize_div_64=True, output_dir='output', dont_save_weights=False, checkpoint_interval=10, seed=42, resume='', start_epoch=0, eval=False, use_ema=True, ema_decay=0.993, ema_tau=100, num_workers=2, device='cpu', world_size=1, dist_url='env://', sync_bn=True, fp16_eval=False, encoder_only=False, backbone_only=False, resolution=560, use_cls_token=False, multi_scale=True, expanded_scales=True, do_random_resize_via_padding=False, warmup_epochs=0, lr_scheduler='step', lr_min_factor=0.0, early_stopping=False, early_stopping_patience=10, early_stopping_min_delta=0.001, early_stopping_use_ema=False, gradient_checkpointing=False, patch_size=14, num_windows=4, positional_encoding_size=37, tensorboard=True, wandb=False, project=None, run=None, class_names=[], run_test=True, train_ann_file='datasets/images_resized/train/_annotations.coco.json', valid_ann_file='datasets/images_resized/valid/_annotations.coco.json', distributed=False)\n",
       "number of params: 31847112\n",
       "[840]\n",
       "loading annotations into memory...\n",
-      "Done (t=0.00s)\n",
+      "Done (t=0.01s)\n",
       "creating index...\n",
       "index created!\n",
       "[840]\n",
       "loading annotations into memory...\n",
-      "Done (t=0.02s)\n",
+      "Done (t=0.01s)\n",
       "creating index...\n",
       "index created!\n",
       "[840]\n",
       "loading annotations into memory...\n",
-      "Done (t=0.02s)\n",
+      "Done (t=0.01s)\n",
       "creating index...\n",
       "index created!\n",
       "Get benchmark\n",
       "Start training\n",
       "Grad accum steps:  4\n",
-      "Total batch size:  16\n",
+      "Total batch size:  16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "torch.cuda.amp.GradScaler is enabled, but CUDA is not available.  Disabling.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "LENGTH OF DATA LOADER: 63\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "User provided device_type of 'cuda', but CUDA is not available. Disabling\n"
      ]
     },
     {
@@ -426,9 +449,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdetr\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RFDETRBase\n\u001b[0;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m RFDETRBase()\n\u001b[1;32m----> 8\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain(\n\u001b[0;32m      9\u001b[0m     dataset_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets/images_resized\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m     epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[0;32m     11\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m,\n\u001b[0;32m     12\u001b[0m     grad_accum_steps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m,\n\u001b[0;32m     13\u001b[0m     lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-4\u001b[39m\n\u001b[0;32m     14\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\danie\\ml_projects\\detr.py:81\u001b[0m, in \u001b[0;36mRFDETR.train\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;124;03mTrain an RF-DETR model.\u001b[39;00m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     80\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_train_config(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m---> 81\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrain_from_config(config, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\danie\\ml_projects\\detr.py:187\u001b[0m, in \u001b[0;36mRFDETR.train_from_config\u001b[1;34m(self, config, **kwargs)\u001b[0m\n\u001b[0;32m    179\u001b[0m     early_stopping_callback \u001b[38;5;241m=\u001b[39m EarlyStoppingCallback(\n\u001b[0;32m    180\u001b[0m         model\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel,\n\u001b[0;32m    181\u001b[0m         patience\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_patience,\n\u001b[0;32m    182\u001b[0m         min_delta\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_min_delta,\n\u001b[0;32m    183\u001b[0m         use_ema\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_use_ema\n\u001b[0;32m    184\u001b[0m     )\n\u001b[0;32m    185\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallbacks[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mon_fit_epoch_end\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(early_stopping_callback\u001b[38;5;241m.\u001b[39mupdate)\n\u001b[1;32m--> 187\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mtrain(\n\u001b[0;32m    188\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mall_kwargs,\n\u001b[0;32m    189\u001b[0m     callbacks\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallbacks,\n\u001b[0;32m    190\u001b[0m )\n",
+      "Cell \u001b[1;32mIn[42], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrfdetr\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RFDETRBase\n\u001b[0;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m RFDETRBase(num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain(\n\u001b[0;32m      8\u001b[0m     dataset_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets/images_resized\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m     train_ann_file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets/images_resized/train/_annotations.coco.json\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m     valid_ann_file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets/images_resized/valid/_annotations.coco.json\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     11\u001b[0m     epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[0;32m     12\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m,\n\u001b[0;32m     13\u001b[0m     grad_accum_steps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m,\n\u001b[0;32m     14\u001b[0m     lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-4\u001b[39m\n\u001b[0;32m     15\u001b[0m )\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\rfdetr\\detr.py:81\u001b[0m, in \u001b[0;36mRFDETR.train\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;124;03mTrain an RF-DETR model.\u001b[39;00m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     80\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_train_config(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m---> 81\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrain_from_config(config, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\rfdetr\\detr.py:187\u001b[0m, in \u001b[0;36mRFDETR.train_from_config\u001b[1;34m(self, config, **kwargs)\u001b[0m\n\u001b[0;32m    179\u001b[0m     early_stopping_callback \u001b[38;5;241m=\u001b[39m EarlyStoppingCallback(\n\u001b[0;32m    180\u001b[0m         model\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel,\n\u001b[0;32m    181\u001b[0m         patience\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_patience,\n\u001b[0;32m    182\u001b[0m         min_delta\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_min_delta,\n\u001b[0;32m    183\u001b[0m         use_ema\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mearly_stopping_use_ema\n\u001b[0;32m    184\u001b[0m     )\n\u001b[0;32m    185\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallbacks[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mon_fit_epoch_end\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(early_stopping_callback\u001b[38;5;241m.\u001b[39mupdate)\n\u001b[1;32m--> 187\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mtrain(\n\u001b[0;32m    188\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mall_kwargs,\n\u001b[0;32m    189\u001b[0m     callbacks\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcallbacks,\n\u001b[0;32m    190\u001b[0m )\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\rfdetr\\main.py:341\u001b[0m, in \u001b[0;36mModel.train\u001b[1;34m(self, callbacks, **kwargs)\u001b[0m\n\u001b[0;32m    339\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[0;32m    340\u001b[0m criterion\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m--> 341\u001b[0m train_stats \u001b[38;5;241m=\u001b[39m train_one_epoch(\n\u001b[0;32m    342\u001b[0m     model, criterion, lr_scheduler, data_loader_train, optimizer, device, epoch,\n\u001b[0;32m    343\u001b[0m     effective_batch_size, args\u001b[38;5;241m.\u001b[39mclip_max_norm, ema_m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mema_m, schedules\u001b[38;5;241m=\u001b[39mschedules, \n\u001b[0;32m    344\u001b[0m     num_training_steps_per_epoch\u001b[38;5;241m=\u001b[39mnum_training_steps_per_epoch,\n\u001b[0;32m    345\u001b[0m     vit_encoder_num_layers\u001b[38;5;241m=\u001b[39margs\u001b[38;5;241m.\u001b[39mvit_encoder_num_layers, args\u001b[38;5;241m=\u001b[39margs, callbacks\u001b[38;5;241m=\u001b[39mcallbacks)\n\u001b[0;32m    346\u001b[0m train_epoch_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m epoch_start_time\n\u001b[0;32m    347\u001b[0m train_epoch_time_str \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(datetime\u001b[38;5;241m.\u001b[39mtimedelta(seconds\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(train_epoch_time)))\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\rfdetr\\engine.py:129\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[1;34m(model, criterion, lr_scheduler, data_loader, optimizer, device, epoch, batch_size, max_norm, ema_m, schedules, num_training_steps_per_epoch, vit_encoder_num_layers, args, callbacks)\u001b[0m\n\u001b[0;32m    126\u001b[0m new_targets \u001b[38;5;241m=\u001b[39m [{k: v\u001b[38;5;241m.\u001b[39mto(device) \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m t\u001b[38;5;241m.\u001b[39mitems()} \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m targets[start_idx:final_idx]]\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m autocast(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mget_autocast_args(args)):\n\u001b[1;32m--> 129\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m model(new_samples, new_targets)\n\u001b[0;32m    130\u001b[0m     loss_dict \u001b[38;5;241m=\u001b[39m criterion(outputs, new_targets)\n\u001b[0;32m    131\u001b[0m     weight_dict \u001b[38;5;241m=\u001b[39m criterion\u001b[38;5;241m.\u001b[39mweight_dict\n",
       "File \u001b[1;32mc:\\Users\\danie\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1751\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1749\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1750\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
@@ -465,10 +488,12 @@
     "import supervision as sv\n",
     "from rfdetr import RFDETRBase\n",
     "\n",
-    "model = RFDETRBase()\n",
+    "model = RFDETRBase(num_classes=4)\n",
     "\n",
     "model.train(\n",
     "    dataset_dir='datasets/images_resized',\n",
+    "    train_ann_file='datasets/images_resized/train/_annotations.coco.json',\n",
+    "    valid_ann_file='datasets/images_resized/valid/_annotations.coco.json',\n",
     "    epochs=10,\n",
     "    batch_size=4,\n",
     "    grad_accum_steps=4,\n",
